# rust_server_template

./: Cargo.toml  README.md  readme.md
src/: main.rs  routers.rs
src/routers/: foo.rs  root.rs  users.rs
src/routers/foo/: getters.rs  posts.rs
src/routers/users/: getters.rs
