[package]
name = "rust_server_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hyper = "0.14.27"
serde = { version="1.0.164", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
